feat: Add database for history and audit

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,6 @@ ANSIBLE_PLAYBOOK_DIR=/app/data/playbooks
 
 # System
 LOG_LEVEL=INFO
+
+# PostgreSQL Database
+DATABASE_URL=postgresql://user:password@db:5432/aiops_db
