feat: Major refactoring - OpenAI API integration, improved data collection, and bug fixes
Changes:
- ai_service.py: Migrated to OpenAI-compatible API (supports gpt-4.1-mini)
- analysis_service.py: Implemented real Elasticsearch and Prometheus data collection
- orchestration_service.py: Fixed full remediation cycle with verification
- chatbot_service.py: Complete NL command processing with all handlers
- automation_service.py: Added subprocess fallback for Ansible execution
- proxmox_service.py: Lazy loading for optional proxmoxer dependency
- mikrotik_service.py: Lazy loading for optional routeros-api dependency
- ansible_service.py: Safe directory creation with temp fallback
- telegram_service.py: Added TelegramService class wrapper
- logger.py: Safe log directory creation
- settings.py: Added OpenAI and feature flag configuration
- .env.example: Updated with all new environment variables
- requirements.txt: Added openai, aiohttp dependencies

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,12 @@ REDIS_PORT=6379
 MILVUS_HOST=milvus
 MILVUS_PORT=19530
 
-# AI Models
+# AI / LLM (OpenAI-совместимый API)
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_BASE_URL=https://api.openai.com/v1
+LLM_MODEL=gpt-4.1-mini
+
+# Legacy AI endpoints (optional)
 LLM_ENDPOINT=http://localhost:8080
 CHRONOS_ENDPOINT=http://localhost:8081
 
@@ -30,8 +35,23 @@ CHRONOS_ENDPOINT=http://localhost:8081
 ANSIBLE_INVENTORY_PATH=/etc/ansible/hosts
 ANSIBLE_PLAYBOOK_DIR=/app/data/playbooks
 
+# Proxmox (Optional)
+PROXMOX_HOST=your_proxmox_host
+PROXMOX_USER=root@pam
+PROXMOX_TOKEN_NAME=your_token_name
+PROXMOX_TOKEN_VALUE=your_token_value
+PROXMOX_VERIFY_SSL=false
+
+# MikroTik (Optional)
+MIKROTIK_HOST=your_mikrotik_host
+MIKROTIK_USER=admin
+MIKROTIK_PASSWORD=your_password
+MIKROTIK_PORT=8728
+
 # System
 LOG_LEVEL=INFO
+ENVIRONMENT=development
 
-# PostgreSQL Database
-DATABASE_URL=postgresql://user:password@db:5432/aiops_db
+# Feature Flags
+ENABLE_AUTO_REMEDIATION=false
+ENABLE_CHATBOT_NL=true
