--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,46 @@
+# Core Framework
 fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.5.0
+pydantic-settings==2.1.0
+
+# Telegram Bot
 python-telegram-bot==20.3
+
+# HTTP Client
 aiohttp==3.9.1
-pyyaml==6.0.1
-elasticsearch==8.11.0
-prometheus-client==0.19.0
 requests==2.31.0
-python-dotenv==1.0.0
-jinja2==3.1.2
-ansible-runner==2.3.3
-huggingface-hub==0.19.4
-sentence-transformers==2.2.2
+
+# OpenAI API (для AI анализа)
+openai>=1.0.0
+
+# Data Storage
+elasticsearch==8.11.0
 redis==5.0.1
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
-alembic>=1.13.0
+alembic==1.13.0
+
+# Monitoring
+prometheus-client==0.19.0
+
+# Configuration
+python-dotenv==1.0.0
+pyyaml==6.0.1
+
+# Templating
+jinja2==3.1.2
+
+# Automation
+ansible-runner==2.3.3
+
+# AI/ML (optional, for local models)
+huggingface-hub==0.19.4
+sentence-transformers==2.2.2
+
+# Network Device Management
+routeros-api==0.17.0
+proxmoxer==2.0.1
+
+# Utilities
+python-dateutil==2.8.2
