feat: Major resilience improvements - Circuit Breaker, Caching, Multi-channel Notifications
## New Features:
- Circuit Breaker pattern for OpenAI, Ollama, Elasticsearch, Prometheus
- LLM Fallback: Ollama as backup when OpenAI is unavailable
- Redis caching for AI responses (analysis, playbooks, NL commands)
- Parallel data collection from ES and Prometheus (asyncio.gather)
- Alertmanager webhook integration for push-based alerting
- Redis Streams for real-time log processing
- Multi-channel notifications: Telegram, Email, Slack, PagerDuty
- Persistent notification queue with retry mechanism

## New Files:
- app/utils/circuit_breaker.py - Circuit breaker implementation
- app/services/cache_service.py - Redis caching service
- app/services/streaming_service.py - Redis Streams log processing
- app/services/notification_service.py - Multi-channel notifications
- config/prometheus.yml - Prometheus configuration
- config/alertmanager.yml - Alertmanager with AIOps webhook

## Updated:
- ai_service.py - Fallback LLM, caching, circuit breaker
- analysis_service.py - Parallel data collection, Alertmanager webhooks
- main.py - New webhook endpoints, health checks
- docker-compose.yml - Added Prometheus, Alertmanager, Ollama
- settings.py - New configuration options
- requirements.txt - New dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,57 +1,118 @@
-# Telegram
+# ==================== AIOps Configuration ====================
+# Скопируйте этот файл в .env и заполните значения
+
+# ==================== Telegram ====================
 TELEGRAM_TOKEN=your_telegram_bot_token_here
 ADMIN_CHAT_ID=your_admin_chat_id_here
 
-# API Server
+# ==================== API Server ====================
 API_HOST=0.0.0.0
 API_PORT=8000
 API_DEBUG=true
 
-# Elasticsearch
+# ==================== Elasticsearch ====================
 ELASTICSEARCH_HOST=elasticsearch
 ELASTICSEARCH_PORT=9200
 
-# Prometheus
+# ==================== Prometheus ====================
 PROMETHEUS_URL=http://prometheus:9090
 
-# Redis
+# ==================== Redis ====================
 REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_CACHE_DB=1
+REDIS_STREAMS_DB=2
+REDIS_NOTIFICATIONS_DB=3
 
-# Milvus
+# ==================== Milvus ====================
 MILVUS_HOST=milvus
 MILVUS_PORT=19530
 
-# AI / LLM (OpenAI-совместимый API)
+# ==================== AI / LLM ====================
+# Primary: OpenAI API (или совместимый)
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_BASE_URL=https://api.openai.com/v1
 LLM_MODEL=gpt-4.1-mini
+
+# Fallback: Ollama (локальная LLM)
+OLLAMA_BASE_URL=http://ollama:11434/v1
+OLLAMA_MODEL=llama3.2
+OLLAMA_ENABLED=true
+
+# Cache TTLs (seconds)
+CACHE_TTL_ANALYSIS=600
+CACHE_TTL_PLAYBOOK=1800
+CACHE_TTL_NL=300
 
 # Legacy AI endpoints (optional)
 LLM_ENDPOINT=http://localhost:8080
 CHRONOS_ENDPOINT=http://localhost:8081
 
-# Ansible
+# ==================== Circuit Breaker ====================
+CB_FAILURE_THRESHOLD=5
+CB_TIMEOUT=60
+CB_SUCCESS_THRESHOLD=2
+
+# ==================== Ansible ====================
 ANSIBLE_INVENTORY_PATH=/etc/ansible/hosts
 ANSIBLE_PLAYBOOK_DIR=/app/data/playbooks
 
-# Proxmox (Optional)
+# ==================== Proxmox (Optional) ====================
 PROXMOX_HOST=your_proxmox_host
 PROXMOX_USER=root@pam
 PROXMOX_TOKEN_NAME=your_token_name
 PROXMOX_TOKEN_VALUE=your_token_value
 PROXMOX_VERIFY_SSL=false
 
-# MikroTik (Optional)
+# ==================== MikroTik (Optional) ====================
 MIKROTIK_HOST=your_mikrotik_host
 MIKROTIK_USER=admin
 MIKROTIK_PASSWORD=your_password
 MIKROTIK_PORT=8728
 
-# System
+# ==================== UniFi (Optional) ====================
+UNIFI_HOST=
+UNIFI_USER=admin
+UNIFI_PASSWORD=
+UNIFI_SITE=default
+
+# ==================== Notifications ====================
+# Email (SMTP)
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+EMAIL_FROM=
+EMAIL_TO=
+
+# Slack
+SLACK_WEBHOOK_URL=
+SLACK_CHANNEL=#alerts
+
+# PagerDuty
+PAGERDUTY_ROUTING_KEY=
+PAGERDUTY_SERVICE_ID=
+
+# Custom Webhook
+CUSTOM_WEBHOOK_URL=
+
+# ==================== Alertmanager ====================
+ALERTMANAGER_URL=http://alertmanager:9093
+ALERTMANAGER_WEBHOOK_ENABLED=true
+
+# ==================== Streaming ====================
+STREAMING_ENABLED=true
+STREAMING_BATCH_SIZE=100
+STREAMING_FLUSH_INTERVAL=5
+
+# ==================== System ====================
 LOG_LEVEL=INFO
 ENVIRONMENT=development
+DATABASE_URL=sqlite:///./aiops.db
 
-# Feature Flags
+# ==================== Feature Flags ====================
 ENABLE_AUTO_REMEDIATION=false
 ENABLE_CHATBOT_NL=true
+ENABLE_LLM_FALLBACK=true
+ENABLE_CACHING=true
+ENABLE_NOTIFICATIONS=true
