feat: Simplify deployment with Makefile, multi-stage Dockerfile, and quick setup
- Add Makefile with 25+ commands for easy project management
- Add multi-stage Dockerfile (api, bot, dev, test targets)
- Optimize docker-compose.yml with profiles (ollama, full)
- Add scripts/setup.sh for one-command installation
- Add docs/QUICKSTART.md with step-by-step guide

Quick start:
  make setup && make up

Or with Ollama:
  docker compose --profile ollama up -d

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,94 @@
-version: '3.8'
+# =============================================================================
+# AIOps Platform - Docker Compose
+# =============================================================================
+# Быстрый старт:
+#   make setup && make up
+#   или: docker compose up -d
+#
+# С локальной LLM (Ollama):
+#   docker compose --profile ollama up -d
+#
+# Полная установка (с Milvus):
+#   docker compose --profile full up -d
+# =============================================================================
 
 services:
-  # ==================== Core Services ====================
+  # ===========================================================================
+  # CORE SERVICES
+  # ===========================================================================
   
   api:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: aiops_api
-    restart: always
+      target: api
+    container_name: aiops-api
+    restart: unless-stopped
     ports:
       - "${API_PORT:-8000}:8000"
-    volumes:
-      - .:/app
-      - ./data/logs:/app/data/logs
-      - ./data/playbooks:/app/data/playbooks
     env_file:
       - .env
     environment:
-      - REDIS_HOST=redis
-      - ELASTICSEARCH_HOST=elasticsearch
+      - REDIS_URL=redis://redis:6379/0
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
       - PROMETHEUS_URL=http://prometheus:9090
       - ALERTMANAGER_URL=http://alertmanager:9093
-      - OLLAMA_BASE_URL=http://ollama:11434/v1
+      - OLLAMA_HOST=http://ollama:11434
+    volumes:
+      - ./playbooks:/app/playbooks:ro
+      - ./config:/app/config:ro
+      - api-logs:/app/logs
     depends_on:
-      - redis
-      - elasticsearch
+      redis:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
+    networks:
+      - aiops-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
 
   bot:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: aiops_bot
-    restart: always
-    command: ["python", "bot/main.py"]
-    volumes:
-      - .:/app
+      target: bot
+    container_name: aiops-bot
+    restart: unless-stopped
     env_file:
       - .env
     environment:
-      - REDIS_HOST=redis
       - API_URL=http://api:8000
+      - REDIS_URL=redis://redis:6379/0
+    volumes:
+      - bot-logs:/app/logs
     depends_on:
-      - api
-      - redis
+      api:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - aiops-network
 
-  # ==================== Data Storage ====================
-  
+  # ===========================================================================
+  # DATA STORES
+  # ===========================================================================
+
   redis:
     image: redis:7-alpine
-    container_name: aiops_redis
-    restart: always
+    container_name: aiops-redis
+    restart: unless-stopped
     ports:
       - "${REDIS_PORT:-6379}:6379"
     volumes:
-      - redis_data:/data
+      - redis-data:/data
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
+    networks:
+      - aiops-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -68,38 +96,47 @@ services:
       retries: 5
 
   elasticsearch:
-    image: elasticsearch:8.11.3
-    container_name: aiops_elasticsearch
-    restart: always
-    ports:
-      - "${ELASTICSEARCH_PORT:-9200}:9200"
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
+    container_name: aiops-elasticsearch
+    restart: unless-stopped
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - cluster.name=aiops-cluster
+    ports:
+      - "${ES_PORT:-9200}:9200"
     volumes:
-      - es_data:/usr/share/elasticsearch/data
+      - es-data:/usr/share/elasticsearch/data
+    networks:
+      - aiops-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -s http://localhost:9200/_cluster/health | grep -q 'green\\|yellow'"]
+      test: ["CMD-SHELL", "curl -s http://localhost:9200/_cluster/health | grep -q '\"status\":\"green\"\\|\"status\":\"yellow\"'"]
       interval: 30s
       timeout: 10s
       retries: 5
+      start_period: 60s
 
-  # ==================== Monitoring ====================
-  
+  # ===========================================================================
+  # MONITORING
+  # ===========================================================================
+
   prometheus:
     image: prom/prometheus:v2.48.0
-    container_name: aiops_prometheus
-    restart: always
+    container_name: aiops-prometheus
+    restart: unless-stopped
     ports:
       - "${PROMETHEUS_PORT:-9090}:9090"
     volumes:
       - ./config/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus_data:/prometheus
+      - prometheus-data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention.time=15d'
       - '--web.enable-lifecycle'
+    networks:
+      - aiops-network
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost:9090/-/healthy"]
       interval: 30s
@@ -108,42 +145,64 @@ services:
 
   alertmanager:
     image: prom/alertmanager:v0.26.0
-    container_name: aiops_alertmanager
-    restart: always
+    container_name: aiops-alertmanager
+    restart: unless-stopped
     ports:
       - "${ALERTMANAGER_PORT:-9093}:9093"
     volumes:
       - ./config/alertmanager.yml:/etc/alertmanager/alertmanager.yml:ro
-      - alertmanager_data:/alertmanager
+      - alertmanager-data:/alertmanager
     command:
       - '--config.file=/etc/alertmanager/alertmanager.yml'
       - '--storage.path=/alertmanager'
-    healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:9093/-/healthy"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    networks:
+      - aiops-network
+    depends_on:
+      - api
 
-  # ==================== AI / LLM ====================
-  
-  # Ollama - локальная LLM (fallback)
+  grafana:
+    image: grafana/grafana:10.2.0
+    container_name: aiops-grafana
+    restart: unless-stopped
+    ports:
+      - "${GRAFANA_PORT:-3000}:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD:-admin}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana-data:/var/lib/grafana
+    networks:
+      - aiops-network
+    depends_on:
+      - prometheus
+
+  # ===========================================================================
+  # AI/LLM - Ollama (Optional - запуск с --profile ollama)
+  # ===========================================================================
+
   ollama:
     image: ollama/ollama:latest
-    container_name: aiops_ollama
-    restart: always
+    container_name: aiops-ollama
+    restart: unless-stopped
     ports:
       - "${OLLAMA_PORT:-11434}:11434"
     volumes:
-      - ollama_data:/root/.ollama
+      - ollama-data:/root/.ollama
     environment:
       - OLLAMA_HOST=0.0.0.0
-    # Раскомментируйте для GPU поддержки
+    networks:
+      - aiops-network
+    profiles:
+      - ollama
+      - full
+    # GPU support (uncomment if you have NVIDIA GPU)
     # deploy:
     #   resources:
     #     reservations:
     #       devices:
     #         - driver: nvidia
-    #           count: 1
+    #           count: all
     #           capabilities: [gpu]
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
@@ -151,72 +210,55 @@ services:
       timeout: 10s
       retries: 3
 
-  # ==================== Vector Database ====================
-  
+  # ===========================================================================
+  # VECTOR DATABASE - Milvus (Optional - запуск с --profile full)
+  # ===========================================================================
+
   milvus:
     image: milvusdb/milvus:v2.3.3-standalone
-    container_name: aiops_milvus
-    restart: always
+    container_name: aiops-milvus
+    restart: unless-stopped
     ports:
       - "${MILVUS_PORT:-19530}:19530"
-      - "9091:9091"
     volumes:
-      - milvus_data:/var/lib/milvus
+      - milvus-data:/var/lib/milvus
     environment:
-      - "ETCD_USE_EMBED=true"
-      - "ETCD_DATA_DIR=/var/lib/milvus/etcd"
-      - "COMMON_MINIO_BUCKET=milvus-bucket"
+      - ETCD_USE_EMBED=true
+      - ETCD_DATA_DIR=/var/lib/milvus/etcd
+    networks:
+      - aiops-network
     profiles:
-      - full  # Только при запуске с --profile full
+      - full
 
-  # ==================== GPU LLM (Optional) ====================
-  
-  # TGI - Text Generation Inference (требует NVIDIA GPU)
-  llm-tgi:
-    image: ghcr.io/huggingface/text-generation-inference:1.4
-    container_name: aiops_llm_tgi
-    command: '--model-id deepseek-ai/DeepSeek-Coder-V2 --quantize bitsandbytes-nf4'
-    ports:
-      - "8080:80"
-    volumes:
-      - ./data/huggingface:/data
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
-    profiles:
-      - gpu  # Только при запуске с --profile gpu
-
-  # ==================== Log Aggregation (Optional) ====================
-  
-  # Filebeat для сбора логов
-  filebeat:
-    image: docker.elastic.co/beats/filebeat:8.11.3
-    container_name: aiops_filebeat
-    restart: always
-    user: root
-    volumes:
-      - ./config/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    environment:
-      - ELASTICSEARCH_HOST=elasticsearch:9200
-    depends_on:
-      - elasticsearch
-    profiles:
-      - logging  # Только при запуске с --profile logging
-
-volumes:
-  redis_data:
-  es_data:
-  prometheus_data:
-  alertmanager_data:
-  ollama_data:
-  milvus_data:
+# =============================================================================
+# NETWORKS
+# =============================================================================
 
 networks:
-  default:
-    name: aiops_network
+  aiops-network:
+    driver: bridge
+    name: aiops-network
+
+# =============================================================================
+# VOLUMES
+# =============================================================================
+
+volumes:
+  redis-data:
+    name: aiops-redis-data
+  es-data:
+    name: aiops-es-data
+  prometheus-data:
+    name: aiops-prometheus-data
+  alertmanager-data:
+    name: aiops-alertmanager-data
+  grafana-data:
+    name: aiops-grafana-data
+  ollama-data:
+    name: aiops-ollama-data
+  milvus-data:
+    name: aiops-milvus-data
+  api-logs:
+    name: aiops-api-logs
+  bot-logs:
+    name: aiops-bot-logs
